objects/geopointe__GP_Assignment_Plan__c.object
<CustomObject>
    <description>Configuration data for Geopointe geographic assignment.</description>
    <fields>
        <fullName>geopointe__Batch_Size_HP_Records__c</fullName>
        <label>HP Batch Size - Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Custom_Assignment_Field__c</fullName>
        <inlineHelpText>This is the Geopointe Assignment Area field on your Standard or Custom object that will be populated with the matching Geopointe Assignment Area record.</inlineHelpText>
        <label>Custom Assignment Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Custom_Assignment_Object__c</fullName>
        <inlineHelpText>This is an the Custom Object you create that links Geopointe Assignment Areas to the standard or custom object in your system. This object you create should have Master-Detail to Geopointe Assignment Area and your custom/standard object.</inlineHelpText>
        <label>Custom Assignment Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Description__c</fullName>
        <inlineHelpText>Short description for this Assignment Plan.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__High_Performance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Utilize the off-platform high performance assignment engine.</inlineHelpText>
        <label>High Performance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Batch_Run_Complete_Date__c</fullName>
        <inlineHelpText>Date and time the last Assignment batch job completed. This field should not be modified by users.</inlineHelpText>
        <label>Last Batch Run Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Batch_Run_Date__c</fullName>
        <inlineHelpText>Date and time the last Assignment batch job ran. This field should not be modified by users.</inlineHelpText>
        <label>Last Batch Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Cleanup_Batch_Run_Date__c</fullName>
        <inlineHelpText>Date and time the last Assignment Plan Cleanup batch job ran. This field should not be modified by users.</inlineHelpText>
        <label>Last Cleanup Batch Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Inactive_Batch_Run_Date__c</fullName>
        <inlineHelpText>Date and time the last Assignment Plan Inactive batch job ran. This field should not be modified by users.</inlineHelpText>
        <label>Last Inactive Batch Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Unassigned_Run_Date__c</fullName>
        <inlineHelpText>Date and time the last job ran that processed all unassigned records. This field should not be modified by users.</inlineHelpText>
        <label>Last Unassigned Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Object__c</fullName>
        <inlineHelpText>API Name of the Map Object this Assignment Plan will run against.</inlineHelpText>
        <label>Map Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Number_of_Areas__c</fullName>
        <label>Number of Areas</label>
        <summaryForeignKey>geopointe__GP_Assignment_Area__c.geopointe__Assignment_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>geopointe__Reassign_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, when a record is assigned to an Area, its owner will be changed to the user defined in the Area&apos;s User field. This only affects plans using assignment fields.</inlineHelpText>
        <label>Reassign Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Run_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Assignment Plan batch job will also run the default Lead or Case Assignment Rule upon record update. This only affects plans using assignment fields. If Reassign Owner is also checked, the Assignment Rule will take precedence.</inlineHelpText>
        <label>Run Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__SOQL_Filter_Grandfather_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, a record that is ALREADY ASSIGNED will not be unassigned later even if it no longer meets the SOQL Filter criteria.</inlineHelpText>
        <label>Grandfather Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__SOQL_Filter__c</fullName>
        <inlineHelpText>A SOQL WHERE clause (without including &quot;WHERE&quot;) can be present here to add a hardcoded filter to the Assignment Plan.</inlineHelpText>
        <label>SOQL Filter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Assignment Plan</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Assignment Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>